--- a/html/los/css/sass/patterns/0-footer.scss
+++ b/html/los/css/sass/patterns/0-footer.scss
@@ -2,7 +2,7 @@
 @import '../_2-mixins.scss'; @import '../_4-colours.scss';
 
 .footer__top {
-  background-color: $dark;
+  background-color: $darkest;
   padding: 2em 8% 1.5em 8%;
 }
 
@@ -10,29 +10,7 @@
   margin-bottom: 0.5em;
 }
 
-.footer__top__menu {
-	margin-bottom: 2.4em;
-}
-
-.footer__top__menu a {
-	display: block;
-	color: $white;
-	font-size: 1.2em;
-	margin: 0 0 0.7em 0;
-	border: none;
- 	&:before {
-	 	content: "— ";
- 	}
- 	&:after {
-	 	content: " »";
- 	}
- 	&:hover {
-	 	text-decoration: underline;
- 	}
-}
-
 .footer__top__report-issues span,
-.footer__top__menu span,
 .footer__top__partners span {
   font-size: 1.25em;
   color: $white;
@@ -62,10 +40,7 @@ footer a {
   max-width: 11.375em;
   height: 4.6875em;
 }
-.icon-footer-partner-nls {
-  max-width: 12.25em;
-  height: 6.906875em;
-}
+
 .icon-footer-partner-cs {
   max-width: 8.3125em;
   height: 5.25em;
@@ -138,12 +113,6 @@ footer i {
     text-align: center;
     max-width: 100%;
   }
-  
-  .footer__top__menu a {
-	  &:before {
-		  content: none;
-	  }
-  }
 
   .footer__top__partners {
 	  text-align: center;
@@ -174,29 +143,17 @@ footer i {
 @media only all and (min-width: 45em) {
   
   .footer__top__report-issues {
-	  padding-right: 10%;
-	  width: 60%;
 	  text-align: center;
   }
   
-  .footer__top__report-issues,
-  .footer__top__menu {
-	  float: right;
+  .footer__top__report-issues {
     span {
 	    text-align: center;
 	    max-width: 17em;
 	    margin: 0 auto 1em auto; 
     }
   } 
-  
-  .footer__top__menu {
-	  width: 40%;
-	  text-align: left;
-	  span {
-		  margin-bottom: 2.1em;
-	  }
-  }
-  
+    
   .footer__top__partners span {
 	  margin: 1.2em 0 1.2em 0;
 	  display: inline-block;
@@ -223,7 +180,6 @@ footer i {
   }
   
   .footer__top__report-issues span,
-  .footer__top__menu span,
   .footer__top__partners span {
     text-align: left;
     max-width: 13.25em;
@@ -238,16 +194,6 @@ footer i {
     padding: 0;
   }
   
-  .footer__top__menu {
-    width: 20%;
-    float: right;
-    text-align: left;
-    padding: 0;
-    span {
-	    margin-bottom: 2.1em;
-    }
-  }
-   
   .footer__top__partners {
     width: 50%;
     //margin-right: 10%;
