--- a/html/los/css/output/patterns/02-buttons.css
+++ b/html/los/css/output/patterns/02-buttons.css
@@ -91,9 +91,9 @@
 .btn--white {
   background-color: #ffffff;
   border-bottom: 0.2em solid #b3b3b3;
-  color: #44693C; }
+  color: #252626; }
   .btn--white:hover {
-    box-shadow: inset 0 0 0 0.2em #A1EA83;
+    box-shadow: inset 0 0 0 0.2em #e0e0e0;
     background-color: #ffffff;
     border-bottom: 0.2em solid #b3b3b3; }
 
