--- a/html/los/css/sass/patterns/02-buttons.scss
+++ b/html/los/css/sass/patterns/02-buttons.scss
@@ -74,9 +74,9 @@
 .btn--white {
   background-color: $white;
   border-bottom: 0.2em solid scale-color($white, $lightness: -30%);
-  color: $dark-text;
+  color: $default-text;
   &:hover {
-    box-shadow: inset 0 0 0 0.2em $light-pastel;
+    box-shadow: inset 0 0 0 0.2em #e0e0e0;
     background-color: $white;
     border-bottom: 0.2em solid scale-color($white, $lightness: -30%);
   }
