--- a/html/los/css/sass/_4-colours.scss
+++ b/html/los/css/sass/_4-colours.scss
@@ -8,6 +8,8 @@ $dark: #44693C;
 
 $darkest: #112F0A;
 
+$dark-grey: #252626;
+
 //// OLD
 $mid-bright: red;
 $section-alpha: red;
@@ -25,7 +27,7 @@ $mid-text: $mid;
 
 $dark-text: $dark;
 
-$default-text: #252626;
+$default-text: $dark-grey;
 
 $disabled-text: #666;
 
