--- a/html/los/css/sass/patterns/02-calls-to-action.scss
+++ b/html/los/css/sass/patterns/02-calls-to-action.scss
@@ -17,11 +17,15 @@
   margin: 0 0 1.5em 0;
   padding: 0.8em;
   background-color: $mid;
-  border-left: 1em solid $dark-text;
+  border-left: 1em solid $dark-grey;
   border-bottom: none;
-  @include transition(background-color, 0.2s, ease-in-out); 
+  @include transition(background-color, 0.1s, ease-in-out); 
+  span {
+	  display: inline-block;
+	  vertical-align: 50%;
+  }
   &:hover {
-    background-color: scale-color($mid, $lightness: 5%);
+    background-color: scale-color($mid, $lightness: 7%);
   }
   &:hover span {
     text-decoration: underline;
@@ -45,21 +49,30 @@
 // Alternatives
 
 .cta--light {
-  background-color: $contrast;
-  border-color: $contrast-light;
+  background-color: $light;
+  border-color: $dark;
   span {
-    color: $white;
+    color: $darkest;
   }
   &:hover {
-    background-color: scale-color($contrast, $lightness: 7%);
+    background-color: scale-color($light, $lightness: 7%);
   }
 }
 
 .cta--light-alt {
-	background-color: $contrast-alt;
-  border-color: $contrast-alt-light;
+	background-color: $contrast;
+  border-color: scale-color($contrast, $lightness: -30%);
+  &:hover {
+    background-color: scale-color($contrast, $lightness: 10%);
+  }
+}
+
+.cta--grey {
+	background-color: $dark-grey;
+  border-color: scale-color($contrast, $lightness: -15%);
   &:hover {
     background-color: scale-color($contrast-alt, $lightness: 7%);
+    border-color: scale-color($contrast, $lightness: -5%);
   }
 }
 
@@ -68,23 +81,32 @@
 	border-left: none;
 	&:hover {
 		border-left: none;
+		background-color: scale-color($dark, $lightness: 8%);
 	}
 }
 
 .cta.cta--light--no-border {
-	background-color: $contrast;
+	background-color: $light;
 	border-left: none;
+	span {
+    color: $darkest;
+  }
 	&:hover {
 		border-left: none;
+    background-color: scale-color($light, $lightness: 7%);
 	}
 }
 
 .cta.icon-pattern {
-  border-color: $light;
+  border-color: $dark;
+  &:hover {
+	  border-color: scale-color($dark, $lightness: 8%);
+  }
 }
 
 .cta--no-circle {
   div {display: none}
+  border-color: $dark;
 }
 
 .cta--block {
@@ -99,56 +121,17 @@
   p {color: $white};
 }
 
-.cta--lockable {
-	width: auto;
-	min-width: 15em;
-	border-left: none;
-	background-color: $darkest;
-	color: $white;
-	div {
-		float: none;
-		display: inline-block;
-	}
-	span {
-		color: $white;
-		width: 55%;
-		height: 2em;
-		//float: left;
-		display: inline-block;
-		margin-left: 0.8em;
-	}
-	.cta--lockable__lock {
-		width: 1.375em;
-		margin-left: 0.2em;
-	}
-	.icon-lock-red {
-		width: 1.375em;
-		height: 1.875em;
-	}
-	&:hover {
-		background-color: scale-color($darkest, $lightness: 9%);
-	} 
-}
-
 @media only all and (min-width: 20em) {
   
   .cta {
-    border-left: 1.5em solid $dark;
+    border-left: 1.5em solid $dark-grey;
     padding: 0.5em 0.8em 0.5em 0.8em;
-  }
-  
-  .cta--light {
-	  border-color: $contrast-light;
-  }
-  
-  .cta--light-alt {
-	  border-color: $contrast-alt-light;
   }
   
   .cta span {
     width: 80%;
     float: left;
-    padding: 0;
+    padding: 0.5em 0 0 0
   }
   
   .cta div {
