--- a/html/los/css/output/global.css
+++ b/html/los/css/output/global.css
@@ -2877,10 +2877,14 @@ ol ul li:before {
 
 .items--block {
   padding: 1.5em 1.5em 1em 1.5em;
-  background-color: #dedfdf; }
+  background-color: #d5f6c7; }
 
 .items .heading__smallest {
-  margin: 0 0 0.6em 0; }
+  margin: 0 0 0.8em 0;
+  font-size: 1.3em; }
+
+.items--block .heading {
+  color: #252626; }
 
 .items ul {
   list-style-type: none; }
