--- a/html/los/css/sass/patterns/06-list-of-items.scss
+++ b/html/los/css/sass/patterns/06-list-of-items.scss
@@ -7,11 +7,16 @@
 
 .items--block {
   padding: 1.5em 1.5em 1em 1.5em;
-  background-color: scale-color($contrast-alt, $lightness: 85%);
+  background-color: scale-color($light-pastel, $lightness: 55%);
 }
 
 .items .heading__smallest {
-  margin: 0 0 0.6em 0;
+  margin: 0 0 0.8em 0;
+  font-size: 1.3em;
+}
+
+.items--block .heading {
+	color: $default-text;
 }
 
 .items ul {
