--- a/html/los/css/sass/patterns/06-pagination.scss
+++ b/html/los/css/sass/patterns/06-pagination.scss
@@ -34,25 +34,25 @@ ol.pagination li {
   color: $white;
   &:hover {
     text-decoration: underline;
-    background-color: $contrast-alt;
+    background-color: $dark;
   }
 }
 
 .pagination__current a {
-  background-color: $mid-bright;
-  color: $white;
+  background-color: $light-pastel;
+  color: $dark;
   cursor: not-allowed;
   border: none;
   &:hover {
     text-decoration: underline;
-    color: $white;
-    background-color: $mid-bright;
+    color: $dark;
+    background-color: $light-pastel;
   }
 }
 
 .pagination__previous a,
 .pagination__next a {
-  background-color: $dark;
+  background-color: scale-color($dark, $lightness: -25%);
   color: $white;
   border-bottom: none;
   padding: 0.35em 0.1em;
