--- a/html/los/css/output/patterns/13-responsive-tables.css
+++ b/html/los/css/output/patterns/13-responsive-tables.css
@@ -75,7 +75,7 @@ tr {
   margin: 0 0 1.5em 0;
   width: 100%;
   font-size: 1.1em;
-  background-color: #dedfdf;
+  background-color: #f4f4f4;
   border-top: 0.2em solid #44693C;
   border-bottom: 0.2em solid #a7a9a9;
   padding: 1em; }
@@ -149,6 +149,6 @@ by side rather than stacked */
     margin: 0 0 0 0.5em;
     padding: 0.8em 0 0 0; }
   tbody tr:nth-child(odd) {
-    background-color: #e3f9da; } }
+    background-color: #dfefd8; } }
 
 /*# sourceMappingURL=13-responsive-tables.css.map */
